feat: update product status
