# src/product/product.controller.ts
@@ -11,24 +11,26 @@ import {
   Query,
   UploadedFiles,
   UseGuards,
-  UseInterceptors,
-} from '@nestjs/common';
-import { ProductService } from './product.service';
-import { ApiBody, ApiConsumes, ApiQuery, ApiTags } from '@nestjs/swagger';
-import { CreateProductDto } from './domain/dto/createProduct.dto';
-import { UpdateProductDto } from './domain/dto/updateProduct.dto';
-import { FileFieldsInterceptor } from '@nestjs/platform-express';
-import { CustomUploadFileValidation } from '../common/services/customUploadFileValidation';
-import { getFileValidator } from '../common/services/fileRequire.validation';
-import { JwtAuthGuard } from '../auth/guard/jwt.guard';
-import { AuthorizationGuard } from '../auth/guard/authorization.guard';
-import { Permissions } from '../common/decorator/permissions.decorator';
-import { Action } from '../role/domain/action.enum';
+  UseInterceptors
+} from "@nestjs/common";
+import { ProductService } from "./product.service";
+import { ApiBody, ApiConsumes, ApiQuery, ApiTags } from "@nestjs/swagger";
+import { CreateProductDto } from "./domain/dto/createProduct.dto";
+import { UpdateProductDto } from "./domain/dto/updateProduct.dto";
+import { FileFieldsInterceptor } from "@nestjs/platform-express";
+import { CustomUploadFileValidation } from "../common/services/customUploadFileValidation";
+import { getFileValidator } from "../common/services/fileRequire.validation";
+import { JwtAuthGuard } from "../auth/guard/jwt.guard";
+import { AuthorizationGuard } from "../auth/guard/authorization.guard";
+import { Permissions } from "../common/decorator/permissions.decorator";
+import { Action } from "../role/domain/action.enum";
+import { UpdateStatusProductDto } from "./domain/dto/updateStatusProduct.dto";
 
-@ApiTags('product')
-@Controller('product')
+@ApiTags("product")
+@Controller("product")
 export class ProductController {
-  constructor(private readonly productService: ProductService) {}
+  constructor(private readonly productService: ProductService) {
+  }
 
   @Post()
   @UseGuards(JwtAuthGuard, AuthorizationGuard)
@@ -37,77 +39,87 @@ export class ProductController {
     return this.productService.create(createProductDto);
   }
 
-  @Patch(':id')
+  @Patch(":id")
   @UseGuards(JwtAuthGuard, AuthorizationGuard)
   @Permissions(Action.productUpdate)
   async update(
-    @Param('id', ParseUUIDPipe) id: string,
-    @Body() updateProductDto: UpdateProductDto,
+    @Param("id", ParseUUIDPipe) id: string,
+    @Body() updateProductDto: UpdateProductDto
   ) {
     return this.productService.update(id, updateProductDto);
   }
 
   @Get()
-  @ApiQuery({ name: 'page', type: Number, required: false })
-  @ApiQuery({ name: 'limit', type: Number, required: false })
+  @ApiQuery({ name: "page", type: Number, required: false })
+  @ApiQuery({ name: "limit", type: Number, required: false })
   async findAll(
-    @Query('page', new DefaultValuePipe(1), ParseIntPipe) page: number = 1,
-    @Query('limit', new DefaultValuePipe(10), ParseIntPipe) limit: number = 10,
+    @Query("page", new DefaultValuePipe(1), ParseIntPipe) page: number = 1,
+    @Query("limit", new DefaultValuePipe(10), ParseIntPipe) limit: number = 10
   ) {
     limit = limit > 100 ? 100 : limit;
     console.log(limit);
     return this.productService.paginate({ page, limit });
   }
-  @Get('admin')
+
+  @Get("admin")
   @Permissions(Action.productRead)
-  @ApiQuery({ name: 'page', type: Number, required: false })
-  @ApiQuery({ name: 'limit', type: Number, required: false })
+  @ApiQuery({ name: "page", type: Number, required: false })
+  @ApiQuery({ name: "limit", type: Number, required: false })
   async adminFindAll(
-    @Query('page', new DefaultValuePipe(1), ParseIntPipe) page: number = 1,
-    @Query('limit', new DefaultValuePipe(10), ParseIntPipe) limit: number = 10,
+    @Query("page", new DefaultValuePipe(1), ParseIntPipe) page: number = 1,
+    @Query("limit", new DefaultValuePipe(10), ParseIntPipe) limit: number = 10
   ) {
     limit = limit > 100 ? 100 : limit;
     return this.productService.adminPaginate({ page, limit });
   }
 
-  @Patch('upload/:id')
+  @Patch("upload/:id")
   @Permissions(Action.productUpdate)
   @UseGuards(JwtAuthGuard, AuthorizationGuard)
-  @ApiConsumes('multipart/form-data')
+  @ApiConsumes("multipart/form-data")
   @ApiBody({
     required: true,
     schema: {
-      type: 'object',
+      type: "object",
       properties: {
         img: {
-          type: 'array',
+          type: "array",
           items: {
-            type: 'string',
-            format: 'binary',
-          },
-        },
-      },
-    },
+            type: "string",
+            format: "binary"
+          }
+        }
+      }
+    }
   })
   @UseInterceptors(
-    FileFieldsInterceptor([{ name: 'img', maxCount: 5 }], {
+    FileFieldsInterceptor([{ name: "img", maxCount: 5 }], {
       fileFilter: CustomUploadFileValidation.fileFilter.bind(
-        CustomUploadFileValidation,
-      ),
-    }),
+        CustomUploadFileValidation
+      )
+    })
   )
   async uploadFile(
-    @Param('id', ParseUUIDPipe) id: string,
+    @Param("id", ParseUUIDPipe) id: string,
     @UploadedFiles(getFileValidator())
-    files: {
+      files: {
       img: Express.Multer.File[];
-    },
+    }
   ) {
     await this.productService.uploadImg(id, files.img);
   }
 
-  @Get(':id')
-  async findById(@Param('id', ParseUUIDPipe) id: string) {
+  @Get(":id")
+  async findById(@Param("id", ParseUUIDPipe) id: string) {
     return this.productService.findById(id);
+  }
+
+  @Patch("status/:id")
+  @Permissions(Action.productUpdate)
+  async updateStatus(
+    @Param("id", ParseUUIDPipe) id: string,
+    @Body() updateStatusProductDto: UpdateStatusProductDto
+  ) {
+    return await this.productService.updateStatus(id, updateStatusProductDto);
   }
 }
